Fixed error in server
